@@ -1,3 +1,7 @@
+2007-09-14  Sanel <karijes@users.sourceforge.net>
+
+	* UnitTest have clock measurements
+
 2007-09-13  Sanel <karijes@users.sourceforge.net>
 
 	* Made some Date and Time members static
@@ -5,6 +9,7 @@
 	* datetime.cpp test updated too
 	* Assertion in days_in_month() for month parameter
 	* ++ and -- operators in Date
+	* edelib-config.in tweaks
 
 2007-09-11  Sanel <karijes@users.sourceforge.net>
 
